# PbDlib-LIG

./: .gitignore  CMakeLists.txt  README.md
data/: data.csv
data/adhsmm/: ADHSMM_test_durMu.txt  ADHSMM_test_durPriors.txt  ADHSMM_test_durSigma.txt  ADHSMM_test_mu.txt  ADHSMM_test_priors.txt  ADHSMM_test_sigma.txt  ADHSMM_test_testData.txt  ADHSMM_test_trans.txt  ADHSMM_test_varnames.txt
data/hsmm/: HSMM_test2_durMu.txt  HSMM_test2_durSigma.txt  HSMM_test2_mu.txt  HSMM_test2_sigma.txt  HSMM_test2_testData.txt  HSMM_test2_trans.txt  HSMM_test_durMu.txt  HSMM_test_durSigma.txt  HSMM_test_mu.txt  HSMM_test_sigma.txt  HSMM_test_trans.txt  HSMM_test_varnames.txt
data/pgmm/: Mu02.txt  Priors02.txt  Sigma02.txt
data/pgmm/quaternionModel/: Zmu_quaternions_P1.txt  Zsigma_quaternions_P1.txt  priors_quaternions.txt  tpgmm_quaternions.txt  vars.txt
data/pgmm/timeInvModel/: Zmu_timeInv.txt  Zmu_timeInv_P1.txt  Zmu_timeInv_P2.txt  Zsigma_timeInv.txt  Zsigma_timeInv_P1.txt  Zsigma_timeInv_P2.txt  pgmm_timeInv.txt  priors_timeInv.txt  vars_timeInv.txt
data/trajgmm/: TrajGMM_posData_Sshape.txt  TrajGMM_posData_Sshape1.txt  TrajGMM_posData_Sshape2.txt  TrajGMM_posData_Sshape3.txt  TrajGMM_posData_Sshape4.txt  TrajGMM_test_Gamma.txt  TrajGMM_test_info.txt  TrajGMM_test_mu.txt  TrajGMM_test_priors.txt  TrajGMM_test_sigma.txt  TrajGMM_test_varnames.txt
examples/: CMakeLists.txt  test_adhsmm.cpp  test_datapoints.cpp  test_demonstration.cpp  test_dmp.cpp  test_gmm.cpp  test_gmr.cpp  test_gmr2.cpp  test_hsmm.cpp  test_hsmm2.cpp  test_lqr.cpp  test_mpc.cpp  test_mvn.cpp  test_onlineDP.cpp  test_quaternions.cpp  test_rewardWeightedRefinement.cpp  test_tpdemonstration.cpp  test_tpgmm.cpp  test_tpgmm_quaternions.cpp  test_tpgmm_timeInvariant.cpp  test_trajGMM.cpp  test_trajMPC.cpp
include/pbdlib/: adhsmm.h  datapoints.h  demonstration.h  gmm.h  gmr.h  hmm.h  hsmm.h  lqr.h  mpc.h  mvn.h  quaternion.h  taskparameters.h  tpdemonstration.h  tpgmm.h  trajMPC.h  trajgmm.h
matlab/: HMMtoText.m  HSMMtoText.m  README.md  TPHSMMtoText.m  TrajGMMtoText.m  loadHSMMfromText.m  readTPDemonstration.m
src/: adhsmm.cpp  datapoints.cpp  demonstration.cpp  gmm.cpp  gmr.cpp  hmm.cpp  hsmm.cpp  lqr.cpp  mpc.cpp  mvn.cpp  quaternion.cpp  taskparameters.cpp  tpdemonstration.cpp  tpgmm.cpp  trajMPC.cpp  trajgmm.cpp
